--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
    <p><b>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></b></p>
    
    <ul>
-     <b>
-     <li>Naveed Hussain</li>
-	 <li>ITMD-361</li>
-	 <li>Lab 3</li>
-	 </b>
+     <li><b>Naveed Hussain</b></li>
+	 <li><b>ITMD-361</b></li>
+	 <li><b>Lab 3</b></li>
    </ul>
    
 
