--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <h1>Excerpts From Select Public Domain Books</h1>
    <table>
      <tr>
-	   <td><b>Book Title</b></td>
-	   <td><b>Book Author</b></td>
+	   <th>Book Title</th>
+	   <th>Book Author</th>
 	 </tr>
 	 <tr>
 	   <td><i>Alice's Adventures in Wonderland</i></td>
